[package]
name = "lemuriea"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!  https://bevyengine.org/learn/book/getting-started/setup/

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1
